P01/force-app/main/default/objects/Shopping_Cart_Item__c/Shopping_Cart_Item__c.object-meta.xml
<CustomObject>
    <label>Shopping Cart Item</label>
    <nameField>
        <displayFormat>SC-{0000}</displayFormat>
        <label>Shopping Cart Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shopping Cart Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>