P01/force-app/main/default/objects/Shopping_Cart_Item__c/fields/T_J_Product__c.field-meta.xml
<CustomField>
    <fullName>T_J_Product__c</fullName>
    <label>T&amp;J Product</label>
    <referenceTo>ProductTJ__c</referenceTo>
    <relationshipLabel>Shopping Cart Items</relationshipLabel>
    <relationshipName>Shopping_Cart_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>